--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@netlify/plugin-nextjs": "^4.41.3",
     "axios": "^1.6.7",
     "isotope-layout": "^3.0.6",
     "jarallax": "^2.1.3",
