--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,6 @@
 
 [build]
-  command = "next build"
-  functions = "netlify/functions"
+  command = "next build && next export"
   publish = "out"
 
   
